# UAV_MID360_SIMULATION

./: .gitignore  .gitmodules
ros2_ws/src/ds4_px4_control/: README.md  package.xml  setup.cfg  setup.py
ros2_ws/src/ds4_px4_control/config/: ds4.yaml
ros2_ws/src/ds4_px4_control/ds4_px4_control/: __init__.py  ds4_position_control.py
ros2_ws/src/ds4_px4_control/launch/: ds4_px4_control.launch.py
ros2_ws/src/ds4_px4_control/test/: test_math.py
ros2_ws/src/px4_mid360_sim/: CMakeLists.txt  package.xml
ros2_ws/src/px4_mid360_sim/config/: mavros_px4_sim.yaml
ros2_ws/src/px4_mid360_sim/models/iris_mid360/: model.config  model.sdf
